raw/Besarianta Prabaswara Sitorus Ezekiel 6426 245150200111041/2024-11-14-09-15-23.ceg/compilation.txt
NT.java:2: error: class lc51 is public, should be declared in a file named lc51.java
public class lc51 {
       ^
1 error
Not compiled
